Python-функционал вынесен в отдельный файл

--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -21,65 +21,9 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 15:14:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:14:45] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:16:04] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:16:04] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:16:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:16:19] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:17:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:17:19] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:17:31] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:17:31] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:01] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:03] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 15:18:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:16] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:18] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 15:18:26] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '9cadb22661ac5567c4a45bed000b2c3cf2f106f031cc31f1d778cc0f776e28fd'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 15:18:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:30] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [03/May/2021 15:18:32] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 15:28:20] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:28:20] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 15:28:21] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -119,6 +63,7 @@
     "from hmac import HMAC\n",
     "from urllib.parse import urlparse, parse_qsl, urlencode\n",
     "import json\n",
+    "from appServerSRP import signSRP\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -138,61 +83,14 @@
     "\n",
     "@app.route('/command',methods=[\"POST\"])\n",
     "def command():\n",
-    "    #print(request.json)\n",
-    "    #od=OrderedDict(sorted(request.json.items(), key=lambda x: x[0]))\n",
-    "    #od[\"args\"]=OrderedDict(sorted(od[\"args\"].items(), key=lambda x: x[0]))\n",
     "    print(request.json)\n",
-    "    hash_code = b64encode(HMAC(SECRET_KEY.encode(), request.json[\"commandHash\"].encode(), sha256).digest())\n",
-    "    return hash_code.decode('utf-8')\n",
+    "    sign = signSRP(SECRET_KEY,request.json[\"commandHash\"])\n",
+    "    return sign\n",
     "\n",
     "@app.route('/appSRP.js',methods=[\"GET\"])\n",
     "def script():\n",
     "    return send_from_directory('templates', 'appSRP.js')\n",
     "app.run(host=APP_HOST, port=APP_PORT, threaded=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'WEqgIodx4aVwjOalMDva3E2jSfqOXPeCKjZWz24hYsE='"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SECRET_KEY=\"a7ed6223a0e28d7ade13a6b9c7902e729d43ba4695f88e436be8d16a70796d57\"\n",
-    "hash_code = b64encode(HMAC(SECRET_KEY.encode(), \"lol\".encode(), sha256).digest())\n",
-    "hash_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b'Q5+vkB8kgfCHvahbFAIRDC0tOO3bVjpXlBWBItkhLyU='"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SECRET_KEY=\"a7ed6223a0e28d7ade13a6b9c7902e729d43ba4695f88e436be8d16a70796d57\"\n",
-    "hash_code = b64encode(HMAC(SECRET_KEY.encode(), urlencode({'commandHash': 'baabb9f7c711a9fa68a9f9899b5e27b96f29abab687b1f228cc1cb20a18f9560'}, doseq=True).encode(), sha256).digest())\n",
-    "hash_code"
    ]
   }
  ],
