--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -22,7 +22,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [03/May/2021 15:28:25] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:28:44] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -301,291 +303,6 @@
     "                        \n",
     "                        \n",
     "app.run(host=PORTAL_HOST, port=PORTAL_PORT, threaded=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectId('608d3b199e44794488c1e482')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PORTAL_PORT=49051\n",
-    "PORTAL_HOST='0.0.0.0'\n",
-    "DATABASE_PORT=27017\n",
-    "\n",
-    "from bson.objectid import ObjectId\n",
-    "import random\n",
-    "import string\n",
-    "import hmac\n",
-    "import hashlib\n",
-    "from hashlib import sha256\n",
-    "from flask import Flask\n",
-    "from flask import request,redirect\n",
-    "from flask import Response\n",
-    "from flask import render_template\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "import os\n",
-    "from pymongo import MongoClient\n",
-    "import os.path\n",
-    "\n",
-    "appID=\"608d39cd4f1b59bc8f97398f\"\n",
-    "client = MongoClient(port=DATABASE_PORT)\n",
-    "db=client.srp\n",
-    "appObject=db.apps.find_one({\"_id\":ObjectId(appID)})\n",
-    "salt=appObject[\"salt\"]\n",
-    "dbHash=appObject[\"passwordHash\"]\n",
-    "formHash=sha256((salt+\"HEDFJKOEDHFDA\").encode('utf-8')).hexdigest()\n",
-    "if dbHash != formHash:\n",
-    "    print(\"пароль не тот\")\n",
-    "newKey=sha256(''.join(random.choices(string.ascii_letters + string.digits, k=10)).encode('utf-8')).hexdigest()\n",
-    "db.apps.update_one({\"_id\":ObjectId(appID)},\n",
-    "                   {'$set': \n",
-    "                   {\n",
-    "                       \"secretKey\":newKey\n",
-    "                   }})\n",
-    "link=db.links.insert_one({\"appID\":ObjectId(appObject[\"_id\"])})\n",
-    "link.inserted_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import random\n",
-    "import string\n",
-    "import hmac\n",
-    "import hashlib\n",
-    "from hashlib import sha256\n",
-    "from flask import Flask\n",
-    "from flask import request,redirect\n",
-    "from flask import Response\n",
-    "from flask import render_template\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "import os\n",
-    "from pymongo import MongoClient\n",
-    "sha256((\"LsYLrhKJ1e\"+\"supersupersuper\").encode('utf-8')).hexdigest()==\"3c68d71c26d9b75689b56ed6d1a8820c53bbaaa91da35401b7c8d2188ebc1525\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from base64 import b64encode\n",
-    "from collections import OrderedDict\n",
-    "from hashlib import sha256\n",
-    "from hmac import HMAC\n",
-    "from urllib.parse import urlparse, parse_qsl, urlencode\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('608c0e27e9e834577d80daa7'),\n",
-       " 'name': 'Блокнот',\n",
-       " 'desc': 'Для записей',\n",
-       " 'spisok': 'off',\n",
-       " 'read': 'zapros',\n",
-       " 'write': 'zapros',\n",
-       " 'delete': 'off',\n",
-       " 'salt': 'uCaMoI4bKC',\n",
-       " 'passwordHash': 'a812082d47d7d6814dea0394eb51d9a7128c0222b26f330fb891520320a60b8e',\n",
-       " 'secretKey': '8b34595526a3b82a32252c9cf89f89424880d12e717128b93df0b4efc735fcff'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PORTAL_PORT=49051\n",
-    "PORTAL_HOST='0.0.0.0'\n",
-    "DATABASE_PORT=27017\n",
-    "\n",
-    "from bson.objectid import ObjectId\n",
-    "import random\n",
-    "import string\n",
-    "import hmac\n",
-    "import hashlib\n",
-    "from hashlib import sha256\n",
-    "from flask import Flask\n",
-    "from flask import request,redirect\n",
-    "from flask import Response\n",
-    "from flask import render_template\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "import os\n",
-    "from pymongo import MongoClient\n",
-    "\n",
-    "client = MongoClient(port=DATABASE_PORT)\n",
-    "db=client.srp\n",
-    "m=db.apps.find_one({\"_id\":ObjectId(\"608c0e27e9e834577d80daa7\")})\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pymongo.cursor.Cursor object at 0x0000028713358848>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(m)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=[]\n",
-    "a.append(1)\n",
-    "a.append(2)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'lol'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open('.ADMIN_PASSWORD','r') as f:\n",
-    "    ADMIN_PASSWORD = f.read()\n",
-    "ADMIN_PASSWORD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Dby5VeKFOslq-CbLqkmnP_yQaHHPs6983wAm7hAKJAw'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from base64 import b64encode\n",
-    "from collections import OrderedDict\n",
-    "from hashlib import sha256\n",
-    "from hmac import HMAC\n",
-    "from urllib.parse import urlparse, parse_qsl, urlencode\n",
-    "d = {\"b\":1,\"a\":4}\n",
-    "\n",
-    "od=OrderedDict(sorted(d.items(), key=lambda x: x))\n",
-    "hash_code =b64encode(HMAC(\"0c863557e6e6cfe5b859d19f83b6add9c42bfe9fc1d696f36dd00da7bb523a59\".encode(), urlencode(od, doseq=True).encode(), sha256).digest())\n",
-    "hash_code.decode('utf-8')[:-1].replace('+', '-').replace('/', '_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"b'Dby5VeKFOslq+CbLqkmnP/yQaHHPs6983wAm7hAKJAw='\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from hashlib import sha256\n",
-    "sha256(\"abc\".encode('utf-8')).hexdigest()"
    ]
   }
  ],
