--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -23,8 +23,24 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 15:28:25] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:28:44] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 15:59:35] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:38] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:40] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:41] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:48] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:59:49] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:00] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:00] \"\u001b[37mGET /secretKey?link_id=608ff3d0856012aac751109a HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:02] \"\u001b[37mGET /getApp?id=608ff3d0856012aac7511099 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:07] \"\u001b[37mGET /devApp?id=608ff3d0856012aac7511099 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:10] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:21] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:21] \"\u001b[37mGET /secretKey?link_id=608ff3e5856012aac75110a1 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:23] \"\u001b[37mGET /getApp?id=608ff3e5856012aac75110a0 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:00:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 16:04:33] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -91,10 +107,12 @@
     "        return redirect(\"/createError\")\n",
     "    if request.form.get('devName', \"\")==\"\":\n",
     "        return redirect(\"/createError\")\n",
+    "    if request.form.get('appSite', \"\")==\"\":\n",
+    "        return redirect(\"/createError\")\n",
     "    if len(request.form.get('appPassword', \"\"))<10:\n",
     "        return redirect(\"/createError\")\n",
-    "    form_text=[\"name\",\"desc\",\"email\",\"devName\"]\n",
-    "    form_checks=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "    form_text=[\"name\",\"desc\",\"email\",\"devName\",\"appSite\"]\n",
+    "    form_checks=[\"list\",\"read\",\"write\",\"delete\"]\n",
     "    appObject={i:request.form.get(i, \"\") for i in form_text}\n",
     "    for i in form_checks:\n",
     "        t=request.form.get(i, \"off\")\n",
@@ -126,7 +144,7 @@
     "    apps=list()\n",
     "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):\n",
     "        t=i\n",
-    "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "        m=[\"list\",\"read\",\"write\",\"delete\"]\n",
     "        status=\"off\"\n",
     "        for i2 in m:\n",
     "            if i[i2] == \"on\":\n",
@@ -145,7 +163,7 @@
     "    apps=list()\n",
     "    for i in db.apps.find({}).sort(\"date\",pymongo.DESCENDING):\n",
     "        t=i\n",
-    "        m=[\"spisok\",\"read\",\"write\",\"delete\"]\n",
+    "        m=[\"list\",\"read\",\"write\",\"delete\"]\n",
     "        status=\"off\"\n",
     "        for i2 in m:\n",
     "            if i[i2] == \"on\":\n",
@@ -170,6 +188,12 @@
     "    print(request.form)\n",
     "    if request.form.get('name', \"\")==\"\":\n",
     "        return redirect(\"/saveError\")\n",
+    "    if request.form.get('email', \"\")==\"\":\n",
+    "        return redirect(\"/saveError\")\n",
+    "    if request.form.get('devName', \"\")==\"\":\n",
+    "        return redirect(\"/saveError\")\n",
+    "    if request.form.get('appSite', \"\")==\"\":\n",
+    "        return redirect(\"/saveError\")\n",
     "    if request.form.get(\"adminPassword\",\"\") != ADMIN_PASSWORD:\n",
     "        return redirect(\"/saveError\")\n",
     "    appID=request.form.get('appID', \"\")\n",
@@ -182,10 +206,11 @@
     "                           \"desc\":request.form.get('appDesc', \"\"),\n",
     "                           \"devName\":request.form.get('devName', \"\"),\n",
     "                           \"email\":request.form.get('email', \"\"),\n",
-    "                           \"spisok\":request.form.get('spisok', \"\"),\n",
+    "                           \"list\":request.form.get('list', \"\"),\n",
     "                           \"read\":request.form.get('read', \"\"),\n",
     "                           \"write\":request.form.get('write', \"\"),\n",
     "                           \"delete\":request.form.get('delete', \"\"),\n",
+    "                           \"appSite\":request.form.get('appSite', \"\")\n",
     "                       }})\n",
     "    return redirect(f\"/adminApp?id={appID}\")\n",
     "\n",
