Добавлено создание папок

--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49053/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 18:21:17] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:41] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:19] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:43] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -46,21 +46,8 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "%USERPROFILE%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:32] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD'}, 'type': 'list', 'serverSign': '0vJ9+vWV6B4bTs+OjtjKPT5w04R/waMj1wnDlToMtco='}\n",
+      "%USERPROFILE%\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2F'}, 'type': 'list', 'serverSign': 'dLRLGYNf3RQr28VGwT8tkG6TT2x0fHi4PeYnGQ42eu0='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -68,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:35] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:47] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -76,8 +63,24 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "C:/Users/maxno/Питон\n",
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR'}, 'type': 'list', 'serverSign': 'NhLuVrebjRivQyw6q7lONsZ3dg01n68K8FL6N2SX7EI='}\n",
+      "C:/Users/maxno/Питон/VKR/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:51] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:49:51] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2Fgrwaed'}, 'type': 'mkdir', 'serverSign': 'KY0LwRcXFo0E+64dbMEydxhfUgeMY4S9LXhvVORVASw='}\n",
+      "http://localhost:49055/\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2F'}, 'type': 'list', 'serverSign': 'dLRLGYNf3RQr28VGwT8tkG6TT2x0fHi4PeYnGQ42eu0='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -85,7 +88,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:39] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:53] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:49:53] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -93,21 +97,8 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "C:/Users/maxno/Питон/VKR\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:42] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP'}, 'type': 'list', 'serverSign': 'xs9Zepl8JVNnaMCLMH3nhsBqq3IYDYpE+x4IqsFJAj4='}\n",
+      "C:/Users/maxno/Питон/VKR/\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2F'}, 'type': 'list', 'serverSign': 'dLRLGYNf3RQr28VGwT8tkG6TT2x0fHi4PeYnGQ42eu0='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -115,7 +106,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:44] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:56] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2Fgrwaed'}, 'type': 'list', 'serverSign': '8dK9bqq4BBFaaXfMEoVwMxm8UDIcTap6/zjmmCWInk0='}\n",
+      "http://localhost:49055/\n",
+      "ПУТЬ\n",
+      "C:/Users/maxno/Питон/VKR/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:58] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -123,24 +131,21 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "C:/Users/maxno/Питон/VKR/Client SRP\n",
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fwsdfvasd'}, 'type': 'delete', 'serverSign': 'ZTckWsDndECrTFR7ljC41E1yJp2rZarWE1d4DdKMw9A='}\n",
-      "http://localhost:49055/\n"
+      "C:/Users/maxno/Питон/VKR/grwaed\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 18:21:50] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:49:59] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2F'}, 'type': 'list', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='}\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2F'}, 'type': 'list', 'serverSign': 'dLRLGYNf3RQr28VGwT8tkG6TT2x0fHi4PeYnGQ42eu0='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -148,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:52] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:50:02] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -156,21 +161,21 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "C:/Users/maxno/Питон/VKR/Client SRP/\n"
+      "C:/Users/maxno/Питон/VKR/\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:56] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:50:05] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fsdfvsd.txt'}, 'type': 'delete', 'serverSign': 'As5zz3rIHd/Rx+7VZeAyfhDg/WyhXpB05PBkgD3O7S8='}\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2Fgrwaed'}, 'type': 'delete', 'serverSign': '9Et9yeBlKiNAKSXMMC5vkizd4CKeC/HIQMLxiAaXqqk='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -178,14 +183,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:21:58] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:50:08] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2F'}, 'type': 'list', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='}\n",
+      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2F'}, 'type': 'list', 'serverSign': 'dLRLGYNf3RQr28VGwT8tkG6TT2x0fHi4PeYnGQ42eu0='}\n",
       "http://localhost:49055/\n"
      ]
     },
@@ -193,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:22:00] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:50:10] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -201,59 +206,14 @@
      "output_type": "stream",
      "text": [
       "ПУТЬ\n",
-      "C:/Users/maxno/Питон/VKR/Client SRP/\n"
+      "C:/Users/maxno/Питон/VKR/\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:22:04] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'delete', 'serverSign': 'IbCOoYZs4mHm6yx8hzikMppPg/1HO6+sUhZyfEmRPsk='}\n",
-      "http://localhost:49055/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:22:06] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'appID': '608ff071856012aac7511084', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2F'}, 'type': 'list', 'serverSign': 'apoa3p7/q12b23zyds4YxF3yJp2cXR7vcwzTI4ubX2Q='}\n",
-      "http://localhost:49055/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:22:08] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ПУТЬ\n",
-      "C:/Users/maxno/Питон/VKR/Client SRP/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 18:23:02] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:57:14] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -268,7 +228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 18:23:04] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:57:16] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -389,6 +349,16 @@
     "                else:\n",
     "                    os.remove(path)\n",
     "                responseObject[\"result\"][\"success\"]=\"True\"\n",
+    "            if t[\"type\"]==\"mkdir\":\n",
+    "                responseObject[\"result\"]=dict()\n",
+    "                path=unquote(t[\"args\"][\"path\"])\n",
+    "                if path==\"\":\n",
+    "                    responseObject[\"result\"][\"success\"]=\"False\"\n",
+    "                else:\n",
+    "                    if path[0]==\"%\":\n",
+    "                        path=os.environ[path[1:-1]].replace(\"\\\\\", \"/\")\n",
+    "                    os.mkdir(path)\n",
+    "                    responseObject[\"result\"][\"success\"]=\"True\"\n",
     "        except Exception:\n",
     "            responseObject[\"result\"][\"success\"]=\"False\"\n",
     "    return responseObject\n",
@@ -512,10 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.mkdir(\"C:/Users/maxno/Питон/VKR/Client SRP/njfdsgdsf/\")"
+   ]
   }
  ],
  "metadata": {
