--- a/Explorer/Explorer.ipynb
+++ b/Explorer/Explorer.ipynb
@@ -2047,6 +2047,426 @@
      "text": [
       "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:25:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '38e442d368844ca9aaac91cafc2ebce0142f5684df69c758fee3d938c606a208'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:25:41] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'ace4e6183a700e54d750fd8da11f38533cffc1eb9802403d09ba91be43931f29'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:25:50] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '7e6dac442807c3d0e58e11fc329bc5953f679906568b7f97ce0a7dc463c87db8'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:25:56] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:26:41] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:27:02] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '68ec6244041a3064528019f7a03fca7640725384ed4299228bebe9870ed6d33e'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:27:04] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:36:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:36:45] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:36:50] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:37:03] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:37:03] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:37:04] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:38:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:38:30] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:38:42] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:38:42] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:42:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:42:42] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '38e442d368844ca9aaac91cafc2ebce0142f5684df69c758fee3d938c606a208'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:42:47] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'ace4e6183a700e54d750fd8da11f38533cffc1eb9802403d09ba91be43931f29'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:42:53] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:43:27] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:43:27] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:43:29] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:43:40] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:46:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:46:33] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:46:35] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:46:40] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:46:48] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '77147583c5aa5215eda4fcb67d680ccb845640efe8357577c0698f945183322c'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:46:49] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:46:59] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:39] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:49:39] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 18:49:40] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '29910167592ad6d15521f797af82bf57e42d9b9c50159f22926ec46ad37e4608'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:45] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:51] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'ef6481006c774e44ca2edf790160e780188b6e5adc6f8cacd5632d2e54a96220'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:51] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:54] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:55] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '44a0e1f3e41257fbc31121e8218f44ae548e1bcb0c2362ebee5b8ab7fed4f128'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:49:59] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:50:05] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'b8744935395687307a6ac214a683b2c59e9d3fa23f74ed06af9c7129bb248eb2'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:50:08] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': 'adc9b88835386ac0a433b06cb9f74de195cea35b37cc387606711fa80c3175b5'}\n"
+     ]
     }
    ],
    "source": [
