--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -23,24 +23,46 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 15:59:35] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:38] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:40] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:41] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:48] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 15:59:49] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:00] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:00] \"\u001b[37mGET /secretKey?link_id=608ff3d0856012aac751109a HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:02] \"\u001b[37mGET /getApp?id=608ff3d0856012aac7511099 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:07] \"\u001b[37mGET /devApp?id=608ff3d0856012aac7511099 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:10] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:21] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:21] \"\u001b[37mGET /secretKey?link_id=608ff3e5856012aac75110a1 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:23] \"\u001b[37mGET /getApp?id=608ff3e5856012aac75110a0 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:00:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 16:04:33] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 18:51:40] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:32] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:34] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:37] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:39] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:39] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:52] \"\u001b[32mPOST /createSave HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:52] \"\u001b[37mGET /secretKey?link_id=60901c90856012aac75110ca HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:54] \"\u001b[37mGET /getApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:56] \"\u001b[37mGET /devApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:53:59] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:01] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:10] \"\u001b[32mPOST /adminSave HTTP/1.1\u001b[0m\" 302 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ImmutableMultiDict([('appID', '60901c90856012aac75110c9'), ('name', 'thgrdghshtsd'), ('devName', 'rregsaregsea'), ('email', 'maxnosko@mail.ru'), ('appSite', 'http:/localhost:49055/'), ('appDesc', 'ewrfesagfreas'), ('list', 'off'), ('read', 'off'), ('write', 'on'), ('delete', 'off'), ('mkdir', 'off'), ('rename', 'on'), ('adminPassword', 'ADMIN_PASSWORD')])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 18:54:11] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:13] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:15] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:17] \"\u001b[37mGET /getApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:25] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:32] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:34] \"\u001b[37mGET /adminApp?id=60901c90856012aac75110c9 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:39] \"\u001b[32mPOST /adminDelete HTTP/1.1\u001b[0m\" 302 -\n",
+      "127.0.0.1 - - [03/May/2021 18:54:39] \"\u001b[37mGET /admin HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:57:01] \"\u001b[37mGET /adminApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:57:07] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:57:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 18:57:09] \"\u001b[37mGET /getApp?id=608ff071856012aac7511084 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -112,7 +134,7 @@
     "    if len(request.form.get('appPassword', \"\"))<10:\n",
     "        return redirect(\"/createError\")\n",
     "    form_text=[\"name\",\"desc\",\"email\",\"devName\",\"appSite\"]\n",
-    "    form_checks=[\"list\",\"read\",\"write\",\"delete\"]\n",
+    "    form_checks=[\"list\",\"read\",\"write\",\"delete\",\"mkdir\",\"rename\"]\n",
     "    appObject={i:request.form.get(i, \"\") for i in form_text}\n",
     "    for i in form_checks:\n",
     "        t=request.form.get(i, \"off\")\n",
@@ -210,6 +232,8 @@
     "                           \"read\":request.form.get('read', \"\"),\n",
     "                           \"write\":request.form.get('write', \"\"),\n",
     "                           \"delete\":request.form.get('delete', \"\"),\n",
+    "                           \"mkdir\":request.form.get('mkdir', \"\"),\n",
+    "                           \"rename\":request.form.get('rename', \"\"),\n",
     "                           \"appSite\":request.form.get('appSite', \"\")\n",
     "                       }})\n",
     "    return redirect(f\"/adminApp?id={appID}\")\n",
